styling a go go

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,6 @@
     <title>Justina Popwalska — Architect</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="stylesheet" href="styles/main.css">
-    <script src="/bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -27,14 +26,14 @@
 
     <div class="main">
       <a href="hoil.html" class="box box--front box--front--1 box--green">
-        <h5 class="h5--box">HOIL</h5>
-        <span class="h5--box h5--box--subtitle">House of innovation</span>
+        <h5 class="h5--box txt--white">HOIL</h5>
+        <span class="h5--box h5--box--subtitle txt--green">House of innovation</span>
         <div class="box__img"><img src="images/cover/hoil.svg" /></div>
       </a>
 
       <a href="soft-targets.html" class="box box--front box--front--2 box--blue">
-        <h5 class="h5--box">SOFT TARGETS</h5>
-        <span class="h5--box h5--box--subtitle">Installation</span>
+        <h5 class="h5--box txt--white">SOFT TARGETS</h5>
+        <span class="h5--box h5--box--subtitle txt--blue">Installation</span>
         <div class="box__img"><img src="images/cover/st.svg" /></div>
       </a>
       <a href="forst.html" class="box box--front box--front--3 box--yellow">
@@ -68,14 +67,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script> -->
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
+    <<script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
-    <!-- endbuild -->
   </body>
 </html>
