--- a/app/soft-targets.html
+++ b/app/soft-targets.html
@@ -1,6 +1,9 @@
 <div class="project__header box--blue">
-  <h2 class="txt--blue">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.</h2>
-  <div class="box__img box__img--relative f-right">
+  <div class="project__header__claim">
+    <h2>SOFT TARGETS</h2>
+    <span class="txt--blue">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</span>  
+  </div>
+  <div class="box__img box__img--inside box__img--2">
     <img src="images/cover/st.svg" />
   </div>
 </div>
