--- a/app/hoil.html
+++ b/app/hoil.html
@@ -1,6 +1,9 @@
 <div class="project__header box--green">
-  <h2 class="txt--green">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.</h2>
-  <div class="box__img box__img--relative f-right">
+  <div class="project__header__claim">
+    <h2>HOIL</h2>
+    <span class="txt--green">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</span>  
+  </div>
+  <div class="box__img box__img--inside box__img--1">
     <img src="images/cover/hoil.svg" />
   </div>
 </div>
