--- a/app/forst.html
+++ b/app/forst.html
@@ -1,6 +1,6 @@
 <div class="project__header box--yellow">
   <div class="project__header__claim">
-    <h2>FORST</h2>
+    <h2 class="project__header__title">FORST</h2>
     <span class="txt--yellow">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</span>  
   </div>
   <div class="box__img box__img--relative f-right">
