--- a/app/soft-targets.html
+++ b/app/soft-targets.html
@@ -1,6 +1,6 @@
 <div class="project__header box--blue">
   <div class="project__header__claim">
-    <h2>SOFT TARGETS</h2>
+    <h2 class="project__header__title">SOFT TARGETS</h2>
     <span class="txt--blue">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</span>  
   </div>
   <div class="box__img box__img--inside box__img--2">
